# MANIAC_2.0

./: CMakeLists.txt  config.nml
input/: MATS.txt  circle.asmg  circle2.asmg  cubes.asmg  pincell.asmg  pincell_test.asmg  quatre.asmg  rod_test.asmg  squares.asmg  stretched_cubes.asmg  supercell_test.asmg
input/MATS/: vera.txt
src/: main.F90
src/core/: m_constants.F90  m_material.F90  m_quadrature.F90  m_types.F90  m_utilities.F90
src/diffusion/: m_diffusion_fem.F90  m_diffusion_iga.F90  m_petsc.F90
src/fem/: m_basis_fem.F90  m_types_fem.F90
src/iga/: m_basis_iga.F90  m_types_iga.F90
src/input_output/: m_asmg.F90  m_output_fem.F90  m_output_iga.F90
src/solver/: m_power_iteration.F90
src/transport/: m_precompute.F90  m_precompute_fem.F90  m_precompute_iga.F90  m_precompute_iga_fdg.F90  m_precompute_iga_pdg.F90  m_sweep_order.F90  m_transport_fem.F90  m_transport_iga.F90  m_transport_iga_fdg.F90  m_transport_iga_pdg.F90
